make editor scrollbar permanent to prevent shifting and change console outline

--- a/styles.css
+++ b/styles.css
@@ -355,10 +355,7 @@ input[type="file"] {
     display: flex;
     flex-direction: column;
     font-weight: 300;
-    outline: 2px solid #95a9ff;
-    /* box-shadow: 0 0 1em #020c27; */
-    box-shadow: 0 0 0.5em #95a9ff;
-    
+    box-shadow: inset 0 0.1rem 0.7rem #95a9ff;
 }
 
 
@@ -415,7 +412,7 @@ input[type="file"] {
     width: 100%;
     height: 100%;
     scrollbar-width: none;
-    
+    overflow-y: scroll;
 }
 .editor {
     min-height: 100%;
